# dbus-sensors

./: Cargo.toml  meson.build
src/: hello.rs  meson.build  smbpbi.rs  smbpbisensor.rs
src/tests/: test-hello.rs
subprojects/: zbus-5.1.1-rs.wrap
